Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21993

Drag&Drop elements around in outline does not wor

XMLWordPrintable

    • e2ae2ad41de96ac01ae68d67de45eedf18321b15 (qt-creator/qt-creator/master)

      I opened lib/Qt/qml/QtTest/TestCase.qml from the qtcreator-4.9.0-beta1 installation, and could not drag&drop function within the TestEvent item, e.g. try to pull 'warn' after 'wait'.

      It works in other places in the same file.

        For Gerrit Dashboard: QTCREATORBUG-21993
        # Subject Branch Project Status CR V

            tjenssen Tim Jenssen
            hjk hjk
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes